--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scrollable Timetable Viewer</title>
+    <title>Stux H4X</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <script>
         const tableData = {{ table_data|tojson }};
@@ -54,6 +54,6 @@
     </div>
     
 
-        <link rel="stylesheet" href="{{ url_for('static', filename='script_p1.js') }}">
+        <script src="{{ url_for('static', filename='script_p1.js') }}"></script>
 </body>
 </html>
