--- a/templates/index2.html
+++ b/templates/index2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Time Slots</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style2.css') }}"> 
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles2.css') }}"> 
     <script>
         const timeSlotsData = {{ time_slots_data|tojson }};
         const selectedData = {{ selected_data | tojson }};
