--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,8 @@
 </head>
 <body>
     <div class="container">
+         <button id="backButton" style="display: none;" class="back-btn">&#11178</button>
+
         <h1>Timetable Generator</h1>
         
         <!-- Search Section -->
