--- a/static/style.css
+++ b/static/style.css
@@ -23,6 +23,20 @@ h1 {
     text-align: center;
 }
 
+.back-btn{
+    padding: 0.3rem;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    border: 1px solid #f4f4f9;
+    font-size: 30px;
+}
+
+.back-btn:hover{
+    background-color: #f9f9f9;
+
+}
+
 #searchBar {
     display: block;
     margin: 20px auto;
